[tool.poetry]
name = "modeltools"
version = "0.2.0"
description = ""
authors = ["Ivan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
Sphinx = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
